Changing the sidebar implementation, the current one is having issues with the screen when it overflows.

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -303,29 +303,8 @@ p {
   background: #345eb2;
 }
 
-#sidebar ul p {
-  color: #fff;
-  padding: 10px;
-}
-
-#sidebar ul li a {
-  padding: 10px;
-  font-size: 1.1em;
-  display: block;
-}
-
 #sidebar.active {
   right: 0px;
-}
-
-#sidebar ul li.active > a, a[aria-expanded="true"] {
-  color: #fff;
-  background: #6d7fcc;
-}
-
-#sidebar ul p {
-  color: #fff;
-  padding: 10px;
 }
 
 ul ul a {
@@ -396,6 +375,39 @@ a, a:hover, a:focus {
   width: 120px;
   height: 120px;
   animation: spin 2s linear infinite;
+}
+
+.collapse {
+  height: auto;
+  width: auto;
+}
+
+.collapse.height {
+  position: relative;
+  height: 0;
+  overflow: hidden;
+  -webkit-transition: height 0.35s ease;
+  -moz-transition: height 0.35s ease;
+  -o-transition: height 0.35s ease;
+  transition: height 0.35s ease;
+}
+
+.collapse.width {
+  position: relative;
+  width: 0;
+  overflow: hidden;
+  -webkit-transition: width 0.35s ease;
+  -moz-transition: width 0.35s ease;
+  -o-transition: width 0.35s ease;
+  transition: width 0.35s ease;
+}
+
+.collapse.in.width {
+  width: auto;
+}
+
+.collapse.in.height {
+  height: auto;
 }
 
 @keyframes spin {
